--- a/client/template/_layout/layout.html
+++ b/client/template/_layout/layout.html
@@ -49,6 +49,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="{{pathFor 'registerRpt'}}">Register</a></li>
                                 <li><a href="{{pathFor 'paymentRpt'}}">Payment</a></li>
+                                <li><a href="{{pathFor 'outStandingRpt'}}">OutStanding</a></li>
                             </ul>
                         </li>
 
